tests/tests/ui/missing-const-generic.rs
use tsap::param;

#[param]
struct Param {
    no_const: u32
}

fn main() {}
